# django-base

./: .gitignore  manage.py  pyproject.toml
src/: settings.py  urls.py
